# compress-mode-tree

./: CMakeLists.txt  README.md  dirinfo.txt  exception.txt  main.cpp  path_generate.py
docs/: compress_tree.md  function_list.md
include/: compress_tree.h  compress_treenode.h  filemeta.h  proper_tree.h  tools.h
src/: compress_tree.cpp  compress_treenode.cpp  filemeta.cpp  proper_tree.cpp  tools.cpp
